first build successfully

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "auther":"npofsi",
     "versionName":"0.0.1",
     "version":"0x00000001",
-    "entrance":["main","init","PL"],
+    "entrance":["main","init"],
     "loader":"PowerLauncher"
 }
