--- a/package.json
+++ b/package.json
@@ -4,5 +4,6 @@
     "versionName":"0.0.1",
     "version":"0x00000001",
     "entrance":["main","init"],
-    "loader":"PowerLauncher"
+    "loader":"PowerLauncher",
+    "ajmode":"ui"
 }
