--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
     "version":"0x00000001",
     "entrance":["main"],
     "loader":"PowerLauncher",
-    "ajmode":"ui"
+    "ajmode":"ui",
+    "dumpKey":"0x10101111"
 }
