--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "auther":"npofsi",
     "versionName":"0.0.1",
     "version":"0x00000001",
-    "entrance":["main"],
+    "entrance":["test"],
     "loader":"PowerLauncher",
     "ajmode":"ui",
     "logLevel":"dev",
